Routes working working to 3 endpoints

--- a/views/characterView.hbs
+++ b/views/characterView.hbs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <p>Character View</p>
     {{{body}}}
   </body>
 </html>
