--- a/views/houseView.hbs
+++ b/views/houseView.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>{{title}}House</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <p>House View </p>
     {{{body}}}
   </body>
 </html>
