background image, nav links

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,14 +2,25 @@
     font-family: GOTfont;
     src: url(GameofThrones.ttf);
 }
-
-body {
-  padding: 50px;
-  font: 14px "GOTfont", sans-serif, Arial, sans-serif;
+html {
+    background: url(../images/kings-landing.jpg) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
 }
 
+body {
+  padding: 0;
+  margin: 0;
+  font: 14px "GOTfont", sans-serif, Arial, sans-serif;
+  height: auto;
 
+}
 
+nav a {
+  display: inline-flex;
+  padding-right: 30px;
+
+}
 
 a {
   color: #00B7FF;
@@ -20,5 +31,17 @@ a {
 }
 
 header {
-  background-color: red;
+
+}
+
+#houseIndexWrapper {
+
+  height: auto;
+
+}
+
+#footer {
+  position: relative;
+  top: 820px;
+  color: white;
 }
