--- a/views/houseindex.hbs
+++ b/views/houseindex.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="houseIndexWrapper">
   <header>
 
   <h1>{{title}}</h1>
@@ -13,6 +13,8 @@
       <div class="kotari">kotare</div>
       <div class="eda">EDA</div>
   </div>
+
+
 </div>
 
 
