--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -7,6 +7,13 @@
 https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
   </head>
   <body>
+    <nav>
+     <a href="/newcharacter/">Add New House</a>
+     <a href="/newhouse">Add New Character</a>
+   </nav>
     {{{body}}}
+    <div id="footer">
+      <p>Made by Olly, Surya, Uili and Hape</p>
+    </div>
   </body>
 </html>
