added some functions to routes

--- a/views/characterView.hbs
+++ b/views/characterView.hbs
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <p>Character View</p>
-    {{{body}}}
-  </body>
-</html>
+<p>Character View</p>
+<p>{{house}}</p>
