--- a/views/houseindex.hbs
+++ b/views/houseindex.hbs
@@ -1,21 +1,6 @@
-<div class="container" id="houseIndexWrapper">
-  <header>
-
-  <h1>{{title}}</h1>
-  <h2>Welcome to {{title}}</h2>
- </header>
-
-  <h3>List of Houses</h3>
-  <div class = "houses">
-
-      <div class="roa">Roa</div>
-      <div class="hihi">hihi</div>
-      <div class="kotari">kotare</div>
-      <div class="eda">EDA</div>
-  </div>
-
-
-</div>
+{{#each House}}
+<p>{{name}}</p>
+{{/each}}
 
 
 
