initial home page styling

--- a/views/houseindex.hbs
+++ b/views/houseindex.hbs
@@ -5,13 +5,20 @@
   <h2>Welcome to {{title}}</h2>
  </header>
 
-  <h3>List of Houses</h3>
-  <div class = "houses">
 
-      <div class="roa">Roa</div>
-      <div class="hihi">hihi</div>
-      <div class="kotari">kotare</div>
-      <div class="eda">EDA</div>
+  <div class = "display-houses">
+  <div>
+      <div class="Roa-id"><img src="#"></div>
+      <p id="roa-id">ROA</p>
+      <div class="Tieke-id"><img src="#"></div>
+      <p id="tieke-id">TIEKE</p>
+
+  </div>
+  <div>
+      <div class="Kotari-id"><img src="#"></div>
+      <p id="kotari-id">KOTARE</p>
+      <div class="Hihi-id"></div>
+      <p id="hihi-id">HIHI</p>
   </div>
 
 
