--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -14,8 +14,8 @@ https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
      <a href="/newhouse">Add New Character</a>
    </nav>
     {{{body}}}
-    <div id="footer">
+    {{! <div id="footer">
       <p>Made by Olly, Surya, Uili and Hape</p>
-    </div>
+    </div> }}
   </body>
 </html>
