--- a/views/newHouse.hbs
+++ b/views/newHouse.hbs
@@ -1,5 +1,8 @@
-<h3>Add a New House to Game of Devs</h3>
 
+<div>
+<h3>Add a New House to Game of Devs</h3>
+</div>
+<div>
 <form method="POST" class="addHouse" id="addHouse" action="/newhouse"/>
 
   House Name: <input id="name" type="text" name="name" placeholder="House Tieke"></input>
@@ -7,3 +10,4 @@
   House History: <input id="description" type="text" name="description" placeholder="Has reigned the Kingdoms of the North for centuries"></input>
   <input type="submit" id="submit" Button value="Enter The Kingdom"></input>
 </form>
+</div>
