--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -8,7 +8,7 @@ https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
   </head>
   <body>
     <nav>
-      <a href="/">The Kingdomg</a>
+      <a href="/">The Kingdom</a>
       <a href="/newhouse">Add New Character</a>
      <a href="/newcharacter/">Add New House</a>
      <a href="/newhouse">Add New Character</a>
