--- a/views/houseindex.hbs
+++ b/views/houseindex.hbs
@@ -1,31 +1,21 @@
 
-{{#each House}}
-<p>{{name}}</p>
-{{/each}}
+
 
 <div class="container" id="houseIndexWrapper">
   <header>
 
-  <h1>{{title}}</h1>
-  <h2>Welcome to {{title}}</h2>
+  <h1>Game of DEVs</h1>
  </header>
 
 
-  <div class = "display-houses">
-  <div>
-      <div class="Roa-id"><img src="#"></div>
-      <p id="roa-id">ROA</p>
-      <div class="Tieke-id"><img src="#"></div>
-      <p id="tieke-id">TIEKE</p>
-
+  <div class ="display-houses">
+    {{#each Houses}}
+      <div class="house">
+          <p>{{name}}</p>
+          <a href="/house/{{id}}"><img src="{{imagePath}}" class="houseimage"></a>
+      </div>
+    {{/each}}
   </div>
-  <div>
-      <div class="Kotari-id"><img src="#"></div>
-      <p id="kotari-id">KOTARE</p>
-      <div class="Hihi-id"></div>
-      <p id="hihi-id">HIHI</p>
-  </div>
-
 
 </div>
 
