--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,8 +56,12 @@ a {
   text-align:center;
 }
 .display-houses {
+  max-width: 800px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  color: gold;
+
 }
 /*.houses-id {
   display: flex;
@@ -122,3 +126,8 @@ justify-content: center;
   margin-top:100px;
 }
 
+.houseimage {
+  width: 300px;
+  height: 250px;
+
+}
