--- a/views/characterView.hbs
+++ b/views/characterView.hbs
@@ -1,6 +1,11 @@
+
 {{#each Character}}
-{{people}}
-{{house}}
-{{imagePath}}
-{{description}}
-{{/each}}
+<div class="characterView">
+  <img src="{{imagePath}}">
+  <h2>{{name}}<h2>
+  <ul>
+    <li>{{house}}</li>
+    <li>{{description}}</li>
+    <li>{{/each}}</li>
+  </ul>
+</div>
