--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -7,12 +7,16 @@
 https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
   </head>
   <body>
+  <header>
+  <h1>Game of DEVs</h1>
+  </header>
     <nav>
       <a href="/">The Kingdom</a>
-      <a href="/newhouse">Add New Character</a>
-     <a href="/newcharacter/">Add New House</a>
-     <a href="/newhouse">Add New Character</a>
+      <a href="/newcharacter">Add New Character</a>
+     <a href="/newhouse">Add New House</a>
+     <a href="#">Allegiance</a>
    </nav>
+
     {{{body}}}
     {{! <div id="footer">
       <p>Made by Olly, Surya, Uili and Hape</p>
