--- a/views/newHouse.hbs
+++ b/views/newHouse.hbs
@@ -3,7 +3,7 @@
 <h3>Add a New House to Game of Devs</h3>
 </div>
 <div>
-<form method="POST" class="addHouse" id="addHouse" action="/newhouse"/>
+<form name="newHouse" method="POST" class="addHouse" id="addHouse" action="newhouse"/>
 
   House Name: <input id="name" type="text" name="name" placeholder="House Tieke"></input>
   Image Path: <input id="imagePath" type="text" name="imagePath" placeholder=""></input>
