--- a/views/houseindex.hbs
+++ b/views/houseindex.hbs
@@ -17,6 +17,13 @@
       </div>
     {{/each}}
   </div>
+<br>
+
+
+
+  {{!     <audio autoplay="autoplay" controls="controls" >
+         <source src=""/>
+    </audio> }}
 
 </div>
 
