--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -7,6 +7,7 @@
 https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
   </head>
   <body>
+    <audio autoplay>
     <nav>
       <a href="/">The Kingdom</a>
       <a href="/newhouse">Add New Character</a>
