--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -8,6 +8,8 @@ https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
   </head>
   <body>
     <audio autoplay>
+      <source src="Opening_Theme___Game_of_Thrones.mp3" autoplay="autoplay">
+    </audio>
     <nav>
       <a href="/">The Kingdom</a>
       <a href="/newhouse">Add New Character</a>
