--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -12,9 +12,9 @@ https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
   <h1>Game of DEVs</h1>
   </header>
 
-    <audio autoplay>
+<!--     <audio autoplay>
       <source src="Opening_Theme___Game_of_Thrones.mp3" autoplay="autoplay">
-    </audio>
+    </audio> -->
 
     <nav>
       <a href="/">The Kingdom</a>
